fix(waybar): Add padding to modules
For some weird reason this is required to not cut off the module
text/icon.

--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -16,7 +16,8 @@ window#waybar.hidden {
     opacity: 0.2;
 }
 .module {
-    margin: 0 0;
+    margin: 0 1;
+    padding: 0 9;
     color: #ffffff;
     border-radius: 1px;
     /* border-radius: 5px; */
